Force add GitHub Actions workflow

--- a/.github/workflows/test_pipeline.yml
+++ b/.github/workflows/test_pipeline.yml
@@ -5,10 +5,12 @@ on:
     branches:
       - main
       - dev
+      - correct_functional_max_calculations_jan24
   pull_request:
     branches:
       - main
       - dev
+      - correct_functional_max_calculations_jan24
 
 jobs:
   test:
