--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+attrs==25.1.0
 cachetools==5.5.0
 certifi==2024.12.14
 charset-normalizer==3.4.1
@@ -34,8 +35,8 @@ ordered-set==4.1.0
 outcome==1.3.0.post0
 packaging==24.2
 pandas==2.2.3
-pdflatex==0.1.3
 pillow==11.1.0
+pipdeptree==2.24.0
 platformdirs==4.3.6
 plotly==5.24.1
 pluggy==1.5.0
