--- a/.github/workflows/test_pipeline.yml
+++ b/.github/workflows/test_pipeline.yml
@@ -37,8 +37,9 @@ jobs:
       - name: 📊 Upload Coverage Report
         uses: codecov/codecov-action@v4
         with:
-          token: ${{ secrets.CODECOV_TOKEN }}
+          token: ${{ secrets.CODECOV_TOKEN }}  # 🔹 Add this line
           files: ./coverage.xml
           fail_ci_if_error: true
           verbose: true
+
 
