--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ cachetools==5.5.0
 certifi==2024.12.14
 charset-normalizer==3.4.1
 contourpy==1.3.1
+coverage==7.6.10
 cycler==0.12.1
 distlib==0.3.9
 exceptiongroup==1.2.2
@@ -48,6 +49,7 @@ PyLaTeX==1.4.2
 pyparsing==3.2.0
 PySocks==1.7.1
 pytest==8.3.4
+pytest-cov==6.0.0
 python-dateutil==2.9.0.post0
 pytz==2024.2
 requests==2.32.3
@@ -69,4 +71,3 @@ urllib3==2.3.0
 virtualenv==20.28.1
 websocket-client==1.8.0
 wsproto==1.2.0
-pytest-cov
