--- a/.github/workflows/test_pipeline.yml
+++ b/.github/workflows/test_pipeline.yml
@@ -19,6 +19,8 @@ jobs:
     steps:
       - name: 🛠️ Checkout Repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 1  # Ensures full repository checkout
 
       - name: 🐍 Set up Python
         uses: actions/setup-python@v4
@@ -27,6 +29,7 @@ jobs:
 
       - name: 📦 Install Dependencies
         run: |
+          ls -l  # Debugging: Check if requirements.txt is present
           python -m pip install --upgrade pip
           pip install -r requirements.txt  # Install dependencies
 
