--- a/.github/workflows/test_pipeline.yml
+++ b/.github/workflows/test_pipeline.yml
@@ -20,7 +20,10 @@ jobs:
       - name: 🛠️ Checkout Repository
         uses: actions/checkout@v4
         with:
-          fetch-depth: 1  # Ensures full repository checkout
+          fetch-depth: 0  # Ensures full repository checkout
+
+      - name: 📂 Verify Repository Structure
+        run: ls -l  # Debugging step to check if tests/ exists
 
       - name: 🐍 Set up Python
         uses: actions/setup-python@v4
@@ -29,7 +32,6 @@ jobs:
 
       - name: 📦 Install Dependencies
         run: |
-          ls -l  # Debugging: Check if requirements.txt is present
           python -m pip install --upgrade pip
           pip install -r requirements.txt  # Install dependencies
 
